Introduce roq-frontmatter

--- a/docs/modules/ROOT/pages/includes/quarkus-roq-data.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-roq-data.adoc
@@ -24,7 +24,7 @@ ifndef::add-copy-button-to-env-var[]
 Environment variable: `+++QUARKUS_ROQ_DATA_DIR+++`
 endif::add-copy-button-to-env-var[]
 --|string 
-|`data`
+|`_data`
 
 
 a|icon:lock[title=Fixed at build time] [[quarkus-roq-data_quarkus-roq-data-enforce-bean]]`link:#quarkus-roq-data_quarkus-roq-data-enforce-bean[quarkus.roq.data.enforce-bean]`
