--- a/docs/modules/ROOT/pages/includes/quarkus-roq.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-roq.adoc
@@ -15,7 +15,7 @@ a|icon:lock[title=Fixed at build time] [[quarkus-roq_quarkus-roq-site-dir]]`link
 
 [.description]
 --
-Path to the static root directory (relative to the project root).
+Path to the Roq site directory (relative to the project root).
 
 ifdef::add-copy-button-to-env-var[]
 Environment variable: env_var_with_copy_button:+++QUARKUS_ROQ_SITE_DIR+++[]
@@ -25,5 +25,22 @@ Environment variable: `+++QUARKUS_ROQ_SITE_DIR+++`
 endif::add-copy-button-to-env-var[]
 --|string 
 |`src/main/site`
+
+
+a|icon:lock[title=Fixed at build time] [[quarkus-roq_quarkus-roq-resource-site-dir]]`link:#quarkus-roq_quarkus-roq-resource-site-dir[quarkus.roq.resource-site-dir]`
+
+
+[.description]
+--
+Path to the Roq site directory in the resources.
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_ROQ_RESOURCE_SITE_DIR+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_ROQ_RESOURCE_SITE_DIR+++`
+endif::add-copy-button-to-env-var[]
+--|string 
+|`site`
 
 |===
