--- a/docs/modules/ROOT/pages/includes/quarkus-roq-data.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-roq-data.adoc
@@ -15,7 +15,7 @@ a|icon:lock[title=Fixed at build time] [[quarkus-roq-data_quarkus-roq-data-dir]]
 
 [.description]
 --
-The location of the Roq data files relative to the quarkus.roq.site-dir.
+The location of the Roq data files relative to the quarkus.roq.dir.
 
 ifdef::add-copy-button-to-env-var[]
 Environment variable: env_var_with_copy_button:+++QUARKUS_ROQ_DATA_DIR+++[]
