Move collections to site

--- a/blog/site/_posts/2024-09-23-seo.md
+++ b/blog/site/_posts/2024-09-23-seo.md
@@ -10,7 +10,7 @@ date: 2024-09-23 14:00:00 +0200
 Adding SEO is as easy as adding this tag to your `<head>` section:
 
 ```html
-  \{#seo page site collections /}
+  \{#seo page site /}
 ```
 
 It will automatically use the Frontmatter data to fill the tags. Read the Roq documentation for more.. 
@@ -18,5 +18,5 @@ It will automatically use the Frontmatter data to fill the tags. Read the Roq do
 
 Like this:
 ```html
-{#seo page site collections /}
+{#seo page site /}
 ```
