--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,2 +1,3 @@
 * xref:index.adoc[Getting started]
 * xref:quarkus-roq-data.adoc[Quarkus Roq Data]
+* xref:quarkus-roq-generator.adoc[Quarkus Roq Generator]
