--- a/docs/modules/ROOT/pages/quarkus-roq-frontmatter.adoc
+++ b/docs/modules/ROOT/pages/quarkus-roq-frontmatter.adoc
@@ -39,32 +39,17 @@ Next, in your template, loop through the paginated posts using:
 
 === Step 2: Including Pagination Controls
 
-To add pagination controls, create something like this in `_includes/pagination.html`:
+To add pagination controls, use the provided `fm/pagination.html` in your own `_includes/pagination.html`:
 
 [source,html]
 ----
-<div class="container">
-  <nav class="pagination" role="pagination">
-    <ul>
-      {#if page.paginator.previous}
-      {#if page.paginator.isSecond}
-      <p><a class="newer-posts" href="{site.url}"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
-      {#else}
-      <p><a class="newer-posts" href="{page.paginator.previous)}/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
-      {/if}
-      {/if}
-
-      {#if page.paginator.total > 1}
-      <p><span class="page-number">Page {page.paginator.currentIndex} of {page.paginator.total}</span></p>
-      {/if}
-
-      {#if page.paginator.next}
-      <p><a class="older-posts" href="{page.paginator.next)}"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
-      {/if}
-    </ul>
-  </nav>
-</div>
+{#include fm/pagination.html}
+{#newer}<i class="fa fa-long-arrow-left" aria-hidden="true"></i>{/newer}
+{#older}<i class="fa fa-long-arrow-right" aria-hidden="true"></i>{/older}
+{/include}
 ----
+
+NOTE: If you want to write your own controls, find inspiration in the FM sources https://github.com/quarkiverse/quarkus-roq/tree/main/roq-frontmatter/runtime/src/main/resources/templates/fm/pagination.html[fm/pagination.html].
 
 Just by doing so, Roq will generate a bunch of pages based on the pagination setting. For example with a pagination size of 4 and with 9 posts, you would get:
 
