--- a/blog/site/_posts/2024-10-09-aliases.md
+++ b/blog/site/_posts/2024-10-09-aliases.md
@@ -8,11 +8,13 @@ tags: plugin, frontmatter, guide, cool-stuff, short-url
 aliases: [aliases-very-cool, aliases-4-ever, aliases-again]
 ---
 
-In the last post, we explored how easy it is to use Quarkus as a static site generator, thanks to @ia3andy's insights. I'm excited to share that we now have a new plugin that allows you to set up redirects for your blog posts! For this post, I've created three redirects.
+In the last post, we saw how easy it is to use Quarkus for static site generator (@ia3andy's was right!). I am excited to share that we now have a new plugin that allows you to set up redirects for your blog posts! For this post, I've created three aliases.
 
 - [aliases-very-cool](/aliases-very-cool)
 - [aliases-4-ever](/aliases-4-ever)
 - [aliases-again](/aliases-again)
+
+> If you click on at least one alias, you will be redirected here again!
 
 **And how did I work my magic to set this up?**
 
