--- a/blog/site/_posts/2024-09-23-seo.md
+++ b/blog/site/_posts/2024-09-23-seo.md
@@ -14,8 +14,7 @@ Adding SEO is as easy as adding this tag to your `<head>` section:
   \{#seo page site /}
 ```
 
-It will automatically use the Frontmatter data to fill the tags. Read the Roq documentation for more.. 
-
+It will automatically use the Frontmatter data to fill the tags. Read the Roq documentation for more... 
 
 Like this:
 ```html
