Fix #116: RSS Feed updates and blog post

--- a/blog/site/_posts/2024-10-10-rss-feed.md
+++ b/blog/site/_posts/2024-10-10-rss-feed.md
@@ -14,11 +14,16 @@ Adding RSS is as easy as adding this tag to your `<head>` section:
   \{#rss site /}
 ```
 
-It will automatically use the Frontmatter data about all your blog posts to generate a proper Atom RSS feed link at `rss.xml`.
-
 Like this:
 ```
 {#rss site /}
+
+```
+
+It will automatically utilize the Frontmatter data from all your blog posts to generate a valid Atom RSS feed link at `rss.xml`. Ensure you create an `rss.xml` file at the root of your site and include this single line of code:
+
+```html
+\{#include fm/rss.html /}
 
 ```
 
