--- a/blog/site/_posts/2024-10-09-aliases.md
+++ b/blog/site/_posts/2024-10-09-aliases.md
@@ -10,9 +10,9 @@ aliases: [aliases-very-cool, aliases-4-ever, aliases-again]
 
 In the last post, we saw how easy it is to use Quarkus for static site generator (@ia3andy's was right!). I am excited to share that we now have a new plugin that allows you to set up redirects for your blog posts! For this post, I've created three aliases.
 
-- [aliases-very-cool]({site.rootUrl.resolve('/aliases-very-cool')})
-- [aliases-4-ever]({site.rootUrl.resolve('/aliases-4-ever')})
-- [aliases-again]({site.rootUrl.resolve('/aliases-again')})
+- [aliases-very-cool]({site.url('/aliases-very-cool')})
+- [aliases-4-ever]({site.url('/aliases-4-ever')})
+- [aliases-again]({site.url('/aliases-again')})
 
 > If you click on at least one alias, you will be redirected here again!
 
