--- a/blog/content/posts/2024-09-23-seo.md
+++ b/blog/content/posts/2024-09-23-seo.md
@@ -1,5 +1,5 @@
 ---
-layout: :theme/post
+layout: post
 title: Out of the box awesome SEO
 img: https://images.unsplash.com/photo-1562577309-2592ab84b1bc?q=80&w=3474&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 description: Learn how to implement SEO in Roq in a blink of an eye.
@@ -11,12 +11,13 @@ date: 2024-09-23 14:00:00 +0200
 Adding SEO is as easy as adding this tag to your `<head>` section:
 
 ```html
-  \{#seo page site /}
+\{#seo page site /}
 ```
 
-It will automatically use the Frontmatter data to fill the tags. Read the Roq documentation for more... 
+It will automatically use the Frontmatter data to fill the tags. Read the Roq documentation for more...
 
 Like this:
+
 ```html
 {#seo page site /}
 ```
