--- a/blog/content/posts/2024-10-08-tagging.md
+++ b/blog/content/posts/2024-10-08-tagging.md
@@ -1,5 +1,5 @@
 ---
-layout: :theme/post
+layout: post
 title: The first Roq plugin is for tagging (with pagination)
 img: https://images.unsplash.com/photo-1523309375637-b3f4f2347f2d?q=80&w=3732&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 description: We introduced the first Roq plugin, it is for collection tagging & with pagination support!
@@ -10,6 +10,7 @@ tags: plugin, frontmatter, guide, cool-stuff
 My mind is getting blown by how much Quarkus was made for Static Site Generation. I just implemented a new plugin to generate tag pages and that was soooo easy.
 
 To use it:
+
 ```xml
  <dependency>
     <groupId>io.quarkiverse.roq</groupId>
