--- a/blog/content/posts/2024-10-09-aliases.md
+++ b/blog/content/posts/2024-10-09-aliases.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: :theme/post
 title: The second Roq plugin is for redirecting your page to a better place!
 img: https://images.unsplash.com/photo-1691210781188-b8c69945e620?q=80&w=1899&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 description: We introduced a way to declare aliases in FrontMatter. It is now easy create redirections to your blog posts!
