--- a/blog/content/posts/2024-10-10-rss-feed.md
+++ b/blog/content/posts/2024-10-10-rss-feed.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: :theme/post
 title: RSS Feed of your blog posts
 description: Automatically generate an RSS feed of your blog links.
 img: https://images.unsplash.com/photo-1520636902994-f596446c3728?q=80&w=3198&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
