--- a/docs/modules/ROOT/pages/includes/quarkus-roq-frontmatter_site.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-roq-frontmatter_site.adoc
@@ -149,7 +149,7 @@ a|icon:lock[title=Fixed at build time] [[quarkus-roq-frontmatter_site-images-pat
 
 [.description]
 --
-The public path containing pages and posts images (relative to the site path)
+The public path containing pages and documents images (relative to the site path)
 
 
 ifdef::add-copy-button-to-env-var[]
